--- a/estilo.css
+++ b/estilo.css
@@ -35,11 +35,32 @@
     justify-content: center;
 }
 
+
+
+
+
+
+
+@keyframes portada{
+    0%{
+        width: 20%;
+    }
+
+    100%{
+        width: 100%;
+    }
+}
+
 .portada{
     width: 100%;
     height: 600px;
     background-size: cover;
     background-position: center;
+
+
+    animation-name: portada;
+    animation-timing-function: ease-in;
+    animation-duration: 1s;
 }
 
 
